# MicroserviceRestaurant

./: README.md  pyproject.toml  run_barker.py  run_expo.py  run_kitchen.py  run_waiter.py
docker/: docker-compose.yml
src/: customers.py  schemas.py
src/employees/: cook.py  expo.py  kitchen.py  waiter.py
src/infrastructure/: order_board.py  post_its.py  postit_board.py
src/kitchen/: stove.py
workers/: consumer.py
