[project]
name = "restaurant"
version = "0.1.0"
description = "Microservices restaurant"
authors = [
    {name = "sagitta42",email = "mariia.redchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "dramatiq (>=2.0.1,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
